<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llSingle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etWriteData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:singleLine="true"
                android:text="@string/etrWriteValue"/>

            <Button
                android:id="@+id/btnWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/m1_title_write"
                android:textSize="@dimen/text_size_16"
                android:theme="@style/MyButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ul_title_AFI"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/etAFI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:singleLine="true"/>

            <Button
                android:id="@+id/btnWriteAFI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ul_title_write_AFI"
                android:textSize="@dimen/text_size_16"
                android:theme="@style/MyButton"/>

            <Button
                android:id="@+id/btnLockAFI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ul_title_lock_AFI"
                android:textSize="@dimen/text_size_16"
                android:theme="@style/MyButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ul_title_DSFID"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/etDSFID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:singleLine="true"/>

            <Button
                android:id="@+id/btnWriteDSFID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ul_title_write_DSFID"
                android:textSize="@dimen/text_size_16"
                android:theme="@style/MyButton"/>

            <Button
                android:id="@+id/btnLockDSFID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ul_title_lock_DSFID"
                android:textSize="@dimen/text_size_16"
                android:theme="@style/MyButton"/>
        </LinearLayout>
    </LinearLayout>
   <ScrollView
        android:id="@+id/svResult"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

       <TextView
           android:id="@+id/tvResultWrite"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:focusable="true"
           android:focusableInTouchMode="true"
           android:gravity="center"
           android:singleLine="false"
           android:textSize="25sp"
           android:textStyle="bold">

           <requestFocus />
       </TextView>
    </ScrollView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>