<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m1_title_block"
            android:textColor="@color/gray" />

        <Spinner
            android:id="@+id/spBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m1_title_read"
            android:theme="@style/MyButton"/>

        <Button
            android:id="@+id/btnReadId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ul_title_scan"
            android:theme="@style/MyButton"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/svResult"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:singleLine="false"
            android:textSize="20sp"
            android:textStyle="bold">

            <requestFocus />
        </TextView>
    </ScrollView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>